--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "build": "npm install && npm install && npm run build --prefix client",
     "client-install": "npm install --prefix client",
     "start": "node server.js",
     "server": "nodemon server.js --ignore './client/'",
